--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,21 +30,13 @@ jobs:
           set +e
           make test
           echo $? > test-exit-code.txt
-          continue-on-error: true
 
-      - name: 📄 Generate HTML Report
-        if: always()
-        run: |
-            mkdir -p reports
-            cp -r test-results/* reports/ || true
-            cp -r playwright-report/* reports/ || true
-
-      - name: 📦 Upload HTML Report as Artifact
+      - name: 📤 Generate + Upload HTML Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
-              name: playwright-report
-              path: reports/
+          name: playwright-report
+          path: playwright-report/
 
       - name: ❌ Mark Job Failed if Tests Failed
         if: always()
