--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "devDependencies": {
+    "@eslint/js": "^9.31.0",
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.13",
-    "eslint": "^8.45.0"
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
     "playwright": "^1.54.1"
