--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           make test
           echo $? > test-exit-code.txt
           exit_code=$(cat test-exit-code.txt)
-          echo "::set-output name=exit_code::$exit_code"
+          echo "exit_code=$exit_code" >> $GITHUB_OUTPUT
 
       - name: 📤 Generate + Upload HTML Report
         if: always()
@@ -41,15 +41,6 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
-
-      - name: ❌ Mark Job Failed if Tests Failed
-        if: always()
-        run: |
-          exit_code=${{ steps.test_step.outputs.exit_code }}
-          if [ "$exit_code" -ne 0 ]; then
-            echo "❌ Some tests failed."
-            exit 1
-          fi
 
   lint:
     runs-on: ubuntu-latest
@@ -74,6 +65,12 @@ jobs:
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
 
+      - name: 📥 Download Playwright Report Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: playwright-report
+          path: playwright-report/
+
       - name: Add PR Comment with Test Summary
         uses: marocchino/sticky-pull-request-comment@v2
         with:
@@ -83,7 +80,7 @@ jobs:
   deploy_report:
     runs-on: ubuntu-latest
     needs: video_player_ci_tests
-    if: github.ref == 'refs/heads/main'
+    if: always()
     steps:
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
@@ -96,3 +93,16 @@ jobs:
           publish_branch: gh-pages
           user_name: github-actions
           user_email: github-actions@github.com
+
+  finalize:
+    needs: [ video_player_ci_tests, deploy_report ]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Fail workflow if tests failed
+        run: |
+          exit_code=${{ needs.video_player_ci_tests.outputs.test_exit_code }}
+          if [ "$exit_code" -ne 0 ]; then
+            echo "Tests failed, failing workflow."
+            exit 1
+          fi
