--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,31 @@ jobs:
         run: make build
 
       - name: 🧪 Run Tests
-        run: make test
+        run: |
+          set +e
+          make test
+          echo $? > test-exit-code.txt
+          continue-on-error: true
 
       - name: 📄 Generate HTML Report
+        if: always()
         run: |
-          mkdir -p reports
-          cp -r test-results/* reports/
-          cp -r playwright-report/* reports/
+            mkdir -p reports
+            cp -r test-results/* reports/ || true
+            cp -r playwright-report/* reports/ || true
 
       - name: 📦 Upload HTML Report as Artifact
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: playwright-report
-          path: reports
+              name: playwright-report
+              path: reports/
+
+      - name: ❌ Mark Job Failed if Tests Failed
+        if: always()
+        run: |
+                exit_code=$(cat test-exit-code.txt)
+                if [ "$exit_code" -ne 0 ]; then
+                  echo "❌ Some tests failed."
+                  exit 1
+                fi
