--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: npm install
 
       - name: 📝 Run ESLint
-        run: npx eslint . --ext .ts,.js
+        run: npx eslint .
 
       - name: 🎨 Run Prettier Check
         run: npx prettier --check .
@@ -60,7 +60,7 @@ jobs:
   pr_comment:
     runs-on: ubuntu-latest
     needs: video_player_ci_tests
-    if: always() && github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request'
     steps:
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
