--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,10 @@ jobs:
           user_name: github-actions
           user_email: github-actions@github.com
 
+      - name: Print GitHub Pages URL
+        run:
+          echo "Report deployed at: https://<your-github-username>.github.io/<r
+
   finalize:
     needs: [ video_player_ci_tests, deploy_report ]
     runs-on: ubuntu-latest
