Full testing and automation framework for a new frontend web application that includes a video player.
Design Document
Project: MyPlayer Web Client
Purpose
A basic video player web client with backend event tracking for analytics purposes. Users interact with the video through play, pause, seek and scrolling. All events are captured and sent to the backend.
Functional Requirements
Video Player UI
	•	Video player with standard HTML5 controls (Play, Pause, Seek).
	•	Works on Chrome and Firefox (desktop only).
	•	Automatically sends events to the backend:
	•	play, pause, seeked, scroll
Event Format:
json
{
  "userId": "user-123",
  "type": "play", // or pause, seeked, scroll
  "videoTime": 34.2,   // seconds
  "timestamp": "2025-06-23T21:15:33.123Z"
}
Backend
	•	Single endpoint: POST /api/event
	•	Logs events to stdout
	•	No database needed

Non-Functional Requirements
	•	Video must load and play without buffering on a fast connection
	•	No JS console errors allowed
Instructions to Run Locally
Prerequisites
	•	Docker + Docker Compose
On your terminal, run: docker-compose up --build
The app will be available at: http://localhost:3000
Your Tasks
A. Write a Test Plan Document
Include:
	•	Functional test cases
	•	Edge cases (e.g., skip to end, double-click pause, malformed backend response)
	•	Manual vs. automated split
	•	Tools you selected (and why)
B. Build the Automation Framework
UI Automation
	•	Use Playwright or Selenium.
	•	Test all controls: Play, Pause, Seek and Scroll (In order to test scroll you will need to add text to the html file so the page will be scrollable)
	•	Validate event POST calls
	•	Screenshot on failure
Backend API Tests
	•	Validate POST /api/event
	•	Positive tests (valid body)
	•	Negative tests (missing fields, wrong types)

C. CI Pipeline (GitHub Actions, Jenkins or similar)
	•	Build project
	•	Start backend server
	•	Run all tests
	•	Export test results as HTML or JUnit
D. Reporting
	•	Automatically generate test report with:
	•	Test name
	•	

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,8 +95,10 @@ jobs:
           user_email: github-actions@github.com
 
       - name: Print GitHub Pages URL
-        run:
-          echo "Report deployed at: https://<your-github-username>.github.io/<repository-name>/"
+        run: |
+          echo "Report deployed at: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+
+
 
 
 
