--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report
+          retention-days: 1
 
   lint:
     runs-on: ubuntu-latest
@@ -82,21 +83,21 @@ jobs:
     needs: video_player_ci_tests
     if: always()
     steps:
-      - name: ⬇️ Checkout Repository
-        uses: actions/checkout@v4
+      - name: ⬇️ Download Playwright report artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
 
-      - name: Deploy Playwright Report to GitHub Pages
+      - name: 🚀 Deploy Playwright Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./playwright-report
-          publish_branch: gh-pages
-          user_name: github-actions
-          user_email: github-actions@github.com
 
-      - name: Print GitHub Pages URL
+      - name: 🔗 Echo GitHub Pages URL
         run: |
-          echo "Report deployed at: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+          echo "✅ Report: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
 
 
   finalize:
