--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report/
+          path: playwright-report
 
   lint:
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: playwright-report
-          path: playwright-report/
+          path: playwright-report
 
       - name: Add PR Comment with Test Summary
         uses: marocchino/sticky-pull-request-comment@v2
@@ -89,7 +89,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: playwright-report
+          publish_dir: ./playwright-report
           publish_branch: gh-pages
           user_name: github-actions
           user_email: github-actions@github.com
