--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,14 @@ jobs:
           path: playwright-report
           retention-days: 1
 
+      - name: 🔴 Fail CI if tests failed
+        if: always()
+        run: |
+          if [ "${{ steps.test_step.outputs.exit_code }}" -ne 0 ]; then
+            echo "Tests failed. Failing the job."
+            exit 1
+          fi
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -61,27 +69,30 @@ jobs:
   pr_comment:
     runs-on: ubuntu-latest
     needs: video_player_ci_tests
-    if: github.event_name == 'pull_request'
+    if: ${{ github.event_name == 'pull_request' && !cancelled() }}
     steps:
       - name: ⬇️ Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 📥 Download Playwright Report Artifact
-        uses: actions/download-artifact@v3
+      - name: 📥 Download Test Report Artifact
+        uses: actions/download-artifact@v4
         with:
           name: playwright-report
           path: playwright-report
 
-      - name: Add PR Comment with Test Summary
-        uses: marocchino/sticky-pull-request-comment@v2
+      - name: 💬 Post PR Comment with Test Summary
+        uses: dorny/test-reporter@v1
         with:
-          header: '🧪 Playwright Test Report Summary'
-          path: playwright-report/index.html
+          name: Tests Summary
+          path: playwright-report/results.xml
+          reporter: java-junit
+          fail-on-error: false
 
-  deploy_report:
+
+  report:
     runs-on: ubuntu-latest
     needs: video_player_ci_tests
-    if: always()
+    if: ${{ !cancelled() }}
     steps:
       - name: ⬇️ Download Playwright report artifact
         uses: actions/download-artifact@v4
@@ -95,20 +106,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./playwright-report
 
-      - name: 🔗 Echo GitHub Pages URL
+      - name: 🔗 GitHub Pages URL
         run: |
           echo "✅ Report: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
-
-
-  finalize:
-    needs: [ video_player_ci_tests, deploy_report ]
-    runs-on: ubuntu-latest
-    if: always()
-    steps:
-      - name: Fail workflow if tests failed
-        run: |
-          exit_code=${{ needs.video_player_ci_tests.outputs.test_exit_code }}
-          if [ "$exit_code" -ne 0 ]; then
-            echo "Tests failed, failing workflow."
-            exit 1
-          fi
